improved image context collecting; Added aspect ratio check for irrelevant imgs.

--- a/experiment/langgraph exp/langgraph_flow.ipynb
+++ b/experiment/langgraph exp/langgraph_flow.ipynb
@@ -17,7 +17,7 @@
     "import os\n",
     "os.environ['LANGCHAIN_TRACING_V2'] = 'true'\n",
     "os.environ['LANGCHAIN_ENDPOINT'] = 'https://api.smith.langchain.com'\n",
-    "os.environ['LANGSMITH_API_KEY'] = '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'"
+    "os.environ['LANGSMITH_API_KEY'] = '123-123-213-123-123-123'"
    ]
   },
   {
