experimented with colQwen and Jina Reranker m0. Ran 19mins for 26 Docs...

--- a/experiment/langgraph exp/langgraph_flow.ipynb
+++ b/experiment/langgraph exp/langgraph_flow.ipynb
@@ -569,7 +569,6 @@
     "            all_results.sort(key=lambda x: x[\"score\"], reverse=True)\n",
     "            return all_results\n",
     "\n",
-    "    \n",
     "    persist_directory = '../../chroma/Ears'\n",
     "    id_key = \"doc_id\"\n",
     "\n",
@@ -926,144 +925,98 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from collections import defaultdict\n",
-    "def pair_images_and_summaries(retrieved_docs):\n",
-    "    image_pairs = defaultdict(dict)\n",
-    "    for doc in retrieved_docs:\n",
-    "        doc_id = doc.get(\"doc_id\") or doc.get(\"summary_metadata\", {}).get(\"doc_id\")\n",
-    "        modality = doc.get(\"modality\") or (doc.get(\"original_metadata\") or {}).get(\"type\")\n",
-    "        if modality == \"image\":\n",
-    "            image_pairs[doc_id][\"image\"] = doc\n",
-    "        elif modality == \"image_summary\":\n",
-    "            image_pairs[doc_id][\"image_summary\"] = doc\n",
-    "    return image_pairs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# return image pair with relevany score: high -> low\n",
-    "def rerank_images_with_vlm(user_query, image_pairs):\n",
-    "    reranked = []\n",
-    "    for doc_id, pair in image_pairs.items():\n",
-    "        image_doc = pair.get(\"image\")\n",
-    "        summary_doc = pair.get(\"image_summary\")\n",
-    "        image_path = image_doc[\"summary\"] if image_doc else None  # or use a dedicated image_path field\n",
-    "        image_summary = summary_doc[\"summary\"] if summary_doc else \"\"\n",
-    "        \n",
-    "        prompt = (\n",
-    "            \"You are a veterinary assistant. \"\n",
-    "            \"Given the user's question and the following image (with its caption), rate how relevant this image is to answering the user's question. \"\n",
-    "            \"Only consider the information in the image and its caption. \"\n",
-    "            \"Output a single integer from 1 (not relevant) to 5 (highly relevant), and nothing else.\\n\\n\"\n",
-    "            f\"User Question: {user_query}\\n\"\n",
-    "            f\"Image Caption: {image_summary}\\n\"\n",
-    "            \"Relevance Score (1-5):\"\n",
-    "        )\n",
-    "        \n",
-    "        messages = [{\n",
-    "            \"role\": \"user\",\n",
-    "            \"content\": prompt,\n",
-    "            \"images\": [image_path] if image_path else []\n",
-    "        }]\n",
-    "        \n",
-    "        response = ollama.chat(\n",
-    "            model=\"minicpm-v:8b\",\n",
-    "            messages=messages,\n",
-    "            options={\"temperature\": 0.2}\n",
-    "        )\n",
-    "        try:\n",
-    "            score = int(response['message']['content'].strip())\n",
-    "        except Exception:\n",
-    "            score = 1  # Default to lowest if parsing fails\n",
-    "        \n",
-    "        reranked.append({\n",
-    "            \"doc_id\": doc_id,\n",
-    "            \"image\": image_doc,\n",
-    "            \"image_summary\": summary_doc,\n",
-    "            \"rerank_score\": score\n",
-    "        })\n",
-    "    reranked.sort(key=lambda d: d[\"rerank_score\"], reverse=True)\n",
-    "    return reranked"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# return text and table with relevancy score: high -> low\n",
-    "def rerank_text_and_table(user_query, docs, model_name=\"llama3.2:3b\"):\n",
-    "    reranked = []\n",
-    "    for doc in docs:\n",
-    "        # You can distinguish tables by a 'modality' or 'type' field if needed\n",
-    "        content = doc[\"summary\"]\n",
-    "        prompt = (\n",
-    "            \"You are a veterinary assistant. \"\n",
-    "            \"Given the user's question and the following document, rate how relevant this document is to answering the user's question. \"\n",
-    "            \"Only consider the information in the document. \"\n",
-    "            \"Output a single integer from 1 (not relevant) to 5 (highly relevant), and nothing else.\\n\\n\"\n",
-    "            f\"User Question: {user_query}\\n\"\n",
-    "            f\"Document Content: {content}\\n\"\n",
-    "            \"Relevance Score (1-5):\"\n",
-    "        )\n",
-    "        messages = [{\n",
-    "            \"role\": \"user\",\n",
-    "            \"content\": prompt\n",
-    "        }]\n",
-    "        response = ollama.chat(\n",
-    "            model=model_name,\n",
-    "            messages=messages,\n",
-    "            options={\"temperature\": 0.2}\n",
-    "        )\n",
-    "        try:\n",
-    "            score = int(response['message']['content'].strip())\n",
-    "        except Exception:\n",
-    "            score = 1  # Default to lowest if parsing fails\n",
-    "        doc[\"rerank_score\"] = score\n",
-    "        reranked.append(doc)\n",
-    "    reranked.sort(key=lambda d: d[\"rerank_score\"], reverse=True)\n",
-    "    return reranked"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 1. Separate\n",
-    "def rerank_all_docs(state):\n",
-    "    \"\"\"\n",
-    "    Rerank all retrieved docs (text, table, image, image_summary) and return a merged reranked_docs list.\n",
-    "    Text/table docs are reranked with LLM, images/image_summaries are paired and reranked with VLM.\n",
-    "    \"\"\"\n",
+    "# truly multimodel [monoqwen], use here If running on Nvidia GPU Machine\n",
+    "# pip install \"rerankers[monovlm]\" qwen-vl-utils transformers\n",
+    "from rerankers import MonoQwen2VLReranker\n",
     "\n",
+    "def rerank_node_monoqwen(state):\n",
+    "    query = state['refined_query']\n",
+    "    candidates = state['retrieved_docs']\n",
     "\n",
-    "    # Separate docs by modality\n",
-    "    text_and_table_docs = []\n",
-    "    image_docs = []\n",
-    "    for doc in state[\"retrieved_docs\"]:\n",
-    "        modality = doc.get(\"modality\") or (doc.get(\"original_metadata\") or {}).get(\"type\")\n",
-    "        if modality in [\"text\", \"table\"]:\n",
-    "            text_and_table_docs.append(doc)\n",
-    "        elif modality in [\"image\", \"image_summary\"]:\n",
-    "            image_docs.append(doc)\n",
-    "\n",
-    "    # Pair images and summaries\n",
-    "    image_pairs = pair_images_and_summaries(image_docs)\n",
+    "    # Prepare candidates for reranker\n",
+    "    rerank_inputs = []\n",
+    "    for doc in candidates:\n",
+    "        if doc.get(\"modality\") == \"text\":\n",
+    "            rerank_inputs.append(doc[\"summary\"])\n",
+    "        elif doc.get(\"modality\") in (\"image\", \"image_summary\"):\n",
+    "            # Use image path if available, else fallback to summary\n",
+    "            image_path = doc.get(\"original_metadata\", {}).get(\"image_path\")\n",
+    "            if image_path:\n",
+    "                rerank_inputs.append(image_path)\n",
+    "            else:\n",
+    "                rerank_inputs.append(doc[\"summary\"])\n",
+    "        else:\n",
+    "            rerank_inputs.append(doc[\"summary\"])\n",
     "\n",
     "    # Rerank\n",
-    "    reranked_texts = rerank_text_and_table(state[\"text_query\"], text_and_table_docs)\n",
-    "    reranked_images = rerank_images_with_vlm(state[\"text_query\"], image_pairs)\n",
+    "    from rerankers import MonoQwen2VLReranker\n",
+    "    reranker = MonoQwen2VLReranker.from_pretrained(\"Qwen/MonoQwen2-VL-v0.1\")\n",
+    "    results = reranker.rerank(query, rerank_inputs, top_k=len(rerank_inputs))\n",
     "\n",
-    "    # Merge\n",
-    "    all_reranked = reranked_texts + reranked_images\n",
-    "    return {\"reranked_doc\": all_reranked}"
+    "    # Attach scores and sort\n",
+    "    for (idx, score) in results:\n",
+    "        candidates[idx]['rerank_score'] = float(score)\n",
+    "    reranked = sorted(candidates, key=lambda x: x.get('rerank_score', 0), reverse=True)\n",
+    "    return {\"reranked_docs\": reranked}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import base64\n",
+    "import os\n",
+    "from transformers import AutoModel\n",
+    "\n",
+    "\n",
+    "def image_to_base64(image_path):\n",
+    "    with open(image_path, \"rb\") as img_file:\n",
+    "        return base64.b64encode(img_file.read()).decode(\"utf-8\")\n",
+    "\n",
+    "def rerank_node_jina_vlm(state):\n",
+    "    query = state['refined_query']\n",
+    "    candidates = state['retrieved_docs']\n",
+    "\n",
+    "    documents = []\n",
+    "    doc_types = []\n",
+    "    for doc in candidates:\n",
+    "        if doc.get(\"modality\") in (\"image\", \"image_summary\"):\n",
+    "            image_path = doc.get(\"original_metadata\", {}).get(\"image_path\")\n",
+    "            if image_path and os.path.exists(image_path):\n",
+    "                documents.append(image_to_base64(image_path))\n",
+    "                doc_types.append(\"image\")\n",
+    "            else:\n",
+    "                documents.append(doc[\"summary\"])\n",
+    "                doc_types.append(\"text\")\n",
+    "        else:\n",
+    "            documents.append(doc[\"summary\"])\n",
+    "            doc_types.append(\"text\")\n",
+    "\n",
+    "    pairs = [[query, doc] for doc in documents]\n",
+    "\n",
+    "    model = AutoModel.from_pretrained(\n",
+    "        'jinaai/jina-reranker-m0',\n",
+    "        torch_dtype=\"auto\",\n",
+    "        trust_remote_code=True,\n",
+    "    )\n",
+    "    model.to('cpu')\n",
+    "    model.eval()\n",
+    "\n",
+    "    # If most docs are images, use doc_type=\"image\", else \"text\"\n",
+    "    n_images = doc_types.count(\"image\")\n",
+    "    n_texts = doc_types.count(\"text\")\n",
+    "    doc_type = \"image\" if n_images > n_texts else \"text\"\n",
+    "\n",
+    "    # If mixed, filter and rerank separately, then merge (advanced)\n",
+    "    # For now, just use the dominant type\n",
+    "    scores = model.compute_score(pairs, max_length=2048, doc_type=doc_type)\n",
+    "\n",
+    "    for doc, score in zip(candidates, scores):\n",
+    "        doc['rerank_score'] = float(score)\n",
+    "    reranked = sorted(candidates, key=lambda x: x.get('rerank_score', 0), reverse=True)\n",
+    "    return {\"reranked_docs\": reranked}"
    ]
   },
   {
@@ -1079,14 +1032,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_retrived_doc\n",
-    "\n",
-    "def test_reranker(test_retrived_doc, query):\n",
+    "def test_rerank_node(rerank_node, refined_query, retrieved_docs, top_n=5):\n",
+    "    # Build the state as expected by rerank_node\n",
     "    state = {\n",
-    "        \"retrieved_docs\":test_retrived_doc,\n",
-    "        \"text_query\": query\n",
+    "        \"refined_query\": refined_query,\n",
+    "        \"retrieved_docs\": retrieved_docs\n",
     "    }\n",
-    "    new_state = rerank_all_docs(query, test_retrived_doc)"
+    "    # Call the rerank node\n",
+    "    new_state = rerank_node(state)\n",
+    "    reranked_docs = new_state.get(\"reranked_docs\", [])\n",
+    "    print(f\"Total docs after reranking: {len(reranked_docs)}\")\n",
+    "    print(f\"Top {top_n} reranked docs (by rerank_score):\")\n",
+    "    for i, doc in enumerate(reranked_docs[:top_n]):\n",
+    "        doc_id = doc.get('doc_id') or (doc.get('original_metadata') or {}).get('doc_id')\n",
+    "        modality = (doc.get('original_metadata') or {}).get('type') or doc.get('modality')\n",
+    "        print(f\"Doc {i}:\")\n",
+    "        print(f\"  Doc ID: {doc_id}\")\n",
+    "        print(f\"  Type: {modality}\")\n",
+    "        print(f\"  Rerank Score: {doc.get('rerank_score')}\")\n",
+    "        print(f\"  Summary: {doc.get('summary')[:100]}...\")\n",
+    "        print(\"-\" * 40)\n",
+    "    # Optionally, check that scores are sorted descending\n",
+    "    scores = [doc.get('rerank_score') for doc in reranked_docs if doc.get('rerank_score') is not None]\n",
+    "    if scores and scores == sorted(scores, reverse=True):\n",
+    "        print(\"PASS: Docs are sorted by rerank_score descending.\")\n",
+    "    else:\n",
+    "        print(\"FAIL: Docs are not sorted correctly or scores are missing.\")\n",
+    "\n",
+    "# Example usage:\n",
+    "refined_query = \"What are possible causes and diagnostic steps for chronic ear infections or otitis in cats, characterized by visible brownish-orange debris, discharge, and wounds in the ear canal, potentially accompanied by signs of infection such as redness, swelling, and bleeding, and how can these conditions be distinguished from other potential health issues that may affect a cat's auditory system\"\n",
+    "test_rerank_node(rerank_node_jina_vlm, refined_query, test_retrived_doc)"
    ]
   }
  ],
