--- a/experiment/langgraph exp/langgraph_flow.ipynb
+++ b/experiment/langgraph exp/langgraph_flow.ipynb
@@ -1028,9 +1028,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total docs after reranking: 26\n",
+      "Top 5 reranked docs (by rerank_score):\n",
+      "Doc 0:\n",
+      "  Doc ID: ffe90423-13a4-4f72-9c9c-13014d5e4ef0\n",
+      "  Type: text\n",
+      "  Rerank Score: 0.8996868133544922\n",
+      "  Summary: Ear canal signs include:\n",
+      "\n",
+      "* Discharge\n",
+      "* Shaking the head\n",
+      "* Scratching/pawing at the ear\n",
+      "\n",
+      "Causes of i...\n",
+      "----------------------------------------\n",
+      "Doc 1:\n",
+      "  Doc ID: c155b851-c3d8-45b3-9509-6f29dba41452\n",
+      "  Type: text\n",
+      "  Rerank Score: 0.8968310356140137\n",
+      "  Summary: Key signs of an ear problem in cats include:\n",
+      "\n",
+      "* Ear scratching or shaking\n",
+      "* Bad odor from the ear\n",
+      "* ...\n",
+      "----------------------------------------\n",
+      "Doc 2:\n",
+      "  Doc ID: 71b93f03-d93f-458d-9f1f-14d7a1d3f8d4\n",
+      "  Type: text\n",
+      "  Rerank Score: 0.8939036130905151\n",
+      "  Summary: Otitis Media in cats is rare and usually caused by an external ear infection that ruptures the eardr...\n",
+      "----------------------------------------\n",
+      "Doc 3:\n",
+      "  Doc ID: 528a70c2-4030-4712-abf1-8dc979f61282\n",
+      "  Type: text\n",
+      "  Rerank Score: 0.874763548374176\n",
+      "  Summary: Here is a concise summary:\n",
+      "\n",
+      "**Bacterial Otitis Externa in Cats**\n",
+      "\n",
+      "Causes: scratches, bites, excess w...\n",
+      "----------------------------------------\n",
+      "Doc 4:\n",
+      "  Doc ID: 61dc1297-3bd3-43c9-adcc-63782f77f690\n",
+      "  Type: text\n",
+      "  Rerank Score: 0.8447167277336121\n",
+      "  Summary: To prevent ear infections and maintain ear health:\n",
+      "\n",
+      "* Bathe cat avoiding water in ears with cotton b...\n",
+      "----------------------------------------\n",
+      "PASS: Docs are sorted by rerank_score descending.\n"
+     ]
+    }
+   ],
    "source": [
     "def test_rerank_node(rerank_node, refined_query, retrieved_docs, top_n=5):\n",
     "    # Build the state as expected by rerank_node\n",
