Created a Hybrid reranking method that fits local mac.

--- a/experiment/langgraph exp/langgraph_flow.ipynb
+++ b/experiment/langgraph exp/langgraph_flow.ipynb
@@ -966,6 +966,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Jina Reranker m0. GPU/CPU, but extremly slow in CPU\n",
     "import base64\n",
     "import os\n",
     "from transformers import AutoModel\n",
@@ -1020,6 +1021,84 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Hybrid Method: CrossEncoder for text, VLM for image.\n",
+    "from sentence_transformers import CrossEncoder\n",
+    "import os\n",
+    "import ollama\n",
+    "\n",
+    "def llm_image_relevance_score(query, image_summary):\n",
+    "    \"\"\"\n",
+    "    Use VLM to rate the relevance of an image (described by its summary) to the query.\n",
+    "    Returns a float score between 0 and 1.\n",
+    "    \"\"\"\n",
+    "    prompt = f\"\"\"\n",
+    "    You are a veterinary assistant AI. Given the following user query and an image summary, rate how relevant the image is to answering the query.\n",
+    "\n",
+    "    - User Query: \"{query}\"\n",
+    "    - Image Summary: \"{image_summary}\"\n",
+    "\n",
+    "    Respond with a single float between 0 (not relevant at all) and 1 (highly relevant). Only output the number, nothing else.\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        response = ollama.chat(\n",
+    "            model=\"minicpm-v:8b\",\n",
+    "            messages=[{\"role\": \"user\", \"content\": prompt}],\n",
+    "            options={\"temperature\": 0.0}\n",
+    "        )\n",
+    "        content = response['message']['content'].strip()\n",
+    "        # Extract the first float in the response\n",
+    "        score = float(content.split()[0])\n",
+    "        # Clamp to [0, 1]\n",
+    "        score = max(0.0, min(1.0, score))\n",
+    "        return score\n",
+    "    except Exception as e:\n",
+    "        print(f\"[llm_image_relevance_score] Error: {e}. Query: {query[:50]}... Summary: {image_summary[:50]}...\")\n",
+    "        return 0.0\n",
+    "\n",
+    "def rerank_node_hybrid(state):\n",
+    "    query = state['refined_query']\n",
+    "    candidates = state['retrieved_docs']\n",
+    "\n",
+    "    # Separate docs\n",
+    "    text_candidates = []\n",
+    "    image_candidates = []\n",
+    "    text_indices = []\n",
+    "    image_indices = []\n",
+    "\n",
+    "    for idx, doc in enumerate(candidates):\n",
+    "        if doc.get(\"modality\") == \"text\" or doc.get(\"modality\") == \"image_summary\":\n",
+    "            text_candidates.append(doc[\"summary\"])\n",
+    "            text_indices.append(idx)\n",
+    "        elif doc.get(\"modality\") == \"image\":\n",
+    "            image_candidates.append(doc)\n",
+    "            image_indices.append(idx)\n",
+    "\n",
+    "    # 1. Rerank text and image summaries as text\n",
+    "    if text_candidates:\n",
+    "        model = CrossEncoder(\"BAAI/bge-reranker-base\")\n",
+    "        pairs = [(query, summary) for summary in text_candidates]\n",
+    "        scores = model.predict(pairs)\n",
+    "        for idx, score in zip(text_indices, scores):\n",
+    "            candidates[idx]['rerank_score'] = float(score)\n",
+    "\n",
+    "    # 2. Score images using LLM and their summary\n",
+    "    for idx in image_indices:\n",
+    "        doc = candidates[idx]\n",
+    "        image_summary = doc.get(\"summary\", \"\")\n",
+    "        score = llm_image_relevance_score(query, image_summary)\n",
+    "        candidates[idx]['rerank_score'] = float(score)\n",
+    "\n",
+    "    # 3. Sort all by rerank_score\n",
+    "    reranked = sorted(candidates, key=lambda x: x.get('rerank_score', 0), reverse=True)\n",
+    "    return {\"reranked_docs\": reranked}"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1028,7 +1107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1117,7 +1196,7 @@
     "\n",
     "# Example usage:\n",
     "refined_query = \"What are possible causes and diagnostic steps for chronic ear infections or otitis in cats, characterized by visible brownish-orange debris, discharge, and wounds in the ear canal, potentially accompanied by signs of infection such as redness, swelling, and bleeding, and how can these conditions be distinguished from other potential health issues that may affect a cat's auditory system\"\n",
-    "test_rerank_node(rerank_node_jina_vlm, refined_query, test_retrived_doc)"
+    "test_rerank_node(rerank_node_hybrid, refined_query, test_retrived_doc)"
    ]
   }
  ],
